--- a/index/css/index.css
+++ b/index/css/index.css
@@ -27,11 +27,22 @@ div#mainContents{
 }
 
 div#mainContents div.IntroBox{
+    /*width: 80%;*/
+    width: 99%;
+    float: left;
+    /*margin-left: 40px;*/
+    margin-left:  auto;
+    /*margin-bottom: 40px;*/
+    margin-bottom: 15px;
+}
+
+div#mainContents div.ProjectBox{
 	width: 80%;
 	float: left;
 	/*margin-left: 40px;*/
 	margin-left:  auto;
-	margin-bottom: 40px;
+	/*margin-bottom: 40px;*/
+	margin-bottom: 15px;
 }
 
 /* ３つのトピックス */
