--- a/index/css/index.css
+++ b/index/css/index.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+a@charset "utf-8";
 
 
 /*-------------------------------------*/
@@ -21,7 +21,7 @@ div#mainContents{
 	background: #fff;
 	/*width: 880px;*/
 	width: 80%;
-	padding: 50px 40px;
+	padding: 10px 40px;
 	margin: 0 auto;
 	text-align: left;
 }
@@ -44,6 +44,71 @@ div#mainContents div.ProjectBox{
 	/*margin-bottom: 40px;*/
 	margin-bottom: 15px;
 }
+
+/* New Project Boxes */
+div#mainContents div.ProjectNewBox{
+    width: 31%;
+    margin: 1%;
+    float: left;
+    text-align: center;
+}
+
+
+h3{
+    /*background: #3cb3e4;*/
+    background: #990000;
+    /*padding: 5px 5px;*/
+    border-radius: 0 10px 0 10px;
+    color: #fff;
+    font-size:15pt;
+}
+
+h4{
+    font-size:11pt;
+    font-weight: bold;
+}
+
+
+div#mainContents div.ProjectNewBox div.fig_box {
+    width: 98%;  
+    overflow:hidden;
+    text-align: center;
+    margin: 1%;
+    position:relative;/* 相対位置指定 */
+    float: left;
+}
+
+div#mainContents div.ProjectNewBox div.fig_box img{
+    width: 90%;
+}
+
+/*
+img{
+    width: 90%;
+}
+*/
+div#mainContents div.ProjectNewBox div.fig_box .caption {
+    font-size:130%;
+    text-align: center;
+    padding-top:80px;
+    color:#fff;
+}
+div#mainContents div.ProjectNewBox div.fig_box .mask {
+    width:100%;
+    height:100%;
+    position:absolute;/* 絶対位置指定 */
+    top:0;
+    left:0;
+    opacity:0;/* マスクを表示しない */
+    background-color:rgba(0,0,0,0.4);/* マスクは半透明 */
+    -webkit-transition:all 0.2s ease;
+    transition:all 0.2s ease;
+}
+div#mainContents div.ProjectNewBox .fig_box:hover .mask {
+    opacity:1;/* マスクを表示する */
+}
+
+
 
 /* ３つのトピックス */
 div#mainContents div.topicsBox{
