--- a/share/css/share.css
+++ b/share/css/share.css
@@ -23,28 +23,42 @@ div#headerBg{
 }
 
 div#header{
-	width: 960px;
-	margin: 0 auto;
-	text-align: left;
+    width: 1000px;
+    /*width: 1060px;*/
+    margin: 0 auto;
+    text-align: left;
 }
 
-	div#header h1{
-		font-size: 20px;
-		float: left;
-		width: 300px;
-		color: #333;
-		letter-spacing: 0.05em;
-		padding: 20px 0 15px 0;
-	}
+div#header div#Title1 h1{
+    font-size: 20px;
+    float: left;
+    width: 220px;
+    color: #333;
+    letter-spacing: 0.05em;
+    padding: 5px 0 5px 0;
+    text-align: center;
+    /* padding: 5%;*/
+}
+
+div#header div#Title2 h1{
+    font-size: 20px;
+    float: left;
+    width: 200px;
+    color: #333;
+    letter-spacing: 0.05em;
+    padding: 5px 0 5px 0;
+    text-align: center;
+    /* padding: 5%;*/
+}
 
 /*-------------------------------------*/
 /* グローバルナビゲーション */
 /*-------------------------------------*/
 
 ul#gNavi{
-	width: 600px;
-	float: right;
-	margin-top: 15px;
+    width: 550px;
+    float: right;
+    margin-top: 15px;
 }
 
 ul#gNavi li{
